2019-06-25 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.17.1, 1.16.x is stable from now on

2019-04-23 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.16.0

2019-04-16 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.15.12

2019-03-26 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.15.10

2019-02-26 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.15.9

2018-12-25 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.15.8

2018-12-04 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: stable version 1.14.2

2018-12-03 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.15.7

2018-11-06 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: versions 1.14.1/1.15.6, SECURITY_PATCH++,
	  (CVE-2018-16845, CVE-2018-16843, CVE-2018-16844)

2018-10-03 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.15.5

2018-10-01 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.15.4

2018-08-28 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.15.3

2018-07-24 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.15.2

2018-07-03 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.15.1

2018-06-05 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.15.0, 1.14.x is now in stable branch,
	  case -> if

2018-04-17 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.14.0

2018-04-11 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.13.12

2018-04-03 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.13.11

2018-03-20 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.13.10

2018-02-20 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.13.9

2017-12-26 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: devel version 1.13.8
