@@ -1,11 +1,6 @@
 . "$GRIMOIRE/FUNCTIONS" &&
 
-if is_version_less $VERSION 1.7.1; then
-  config_query NGINX_SYSLOG "Build with syslog support?" n
-else
-  persistent_add NGINX_SYSLOG &&
-  local NGINX_SYSLOG="n"
-fi &&
+persistent_remove NGINX_SYSLOG &&
 
 if [[ "${NGINX_RELEASE}" != "devel" ]]; then
   config_query_option NGINX_OPTS "Build with IPv6 support?" n \
