@@ -15,8 +15,9 @@ optional_depends libxslt \
                  "--with-http_xslt_module" "" \
                  "to enable HTTP XSLT module" &&
 
-if [[ $NGINX_SYSLOG == y ]] || is_version_less 1.7.0 $VERSION; then
-  suggest_depends SYSTEM-LOGGER "" "" "to use syslog"
+if is_version_less 1.7.0 $VERSION; then
+  suggest_depends SYSTEM-LOGGER "--add-module=${SOURCE_DIRECTORY}/syslog" "" \
+                                "to use syslog"
 fi &&
 
 if list_find "$NGINX_MODULES" "dav_ext"; then
