@@ -1,7 +1,7 @@
 default_pre_build &&
 cd "$SOURCE_DIRECTORY" &&
 
-if [[ $NGINX_SYSLOG == y ]]; then
+if [[ "$(get_spell_provider ${SPELL} SYSTEM-LOGGER)" != "" ]]; then
   mkdir syslog &&
   cp "$SPELL_DIRECTORY/syslog-0.8-1.6.config" syslog/config &&
   patch -p1 < "$SPELL_DIRECTORY/syslog-1.5.6.patch"
