@@ -1,3 +1,7 @@
+2019-06-28 Pavel Vinogradov <public@sourcemage.org>
+	* CONFIGURE, BUILD, DEPENDS, PRE_BUILD, syslog-1.5.6.patch: simplified
+	  syslog module option and updated the corresponding patch
+
 2019-06-25 Pavel Vinogradov <public@sourcemage.org>
 	* DETAILS: devel version 1.17.1, 1.16.x is stable from now on
 
